err/deepin-storm.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/deepin_storm'...
Compiling './lib/python3.5/site-packages/deepin_storm/common.py'...
***   File "./lib/python3.5/site-packages/deepin_storm/common.py", line 108
    except KeyError, k:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/deepin_storm/events.py'...
***   File "./lib/python3.5/site-packages/deepin_storm/events.py", line 55
    raise ValueError, "We need a bound method!"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/deepin_storm/fetch.py'...
***   File "./lib/python3.5/site-packages/deepin_storm/fetch.py", line 121
    except urllib2.URLError, u:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/deepin_storm/report.py'...
***   File "./lib/python3.5/site-packages/deepin_storm/report.py", line 131
    print "\r%s %s %s %s" % (drate, pcomp, tleft, pbar),
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/deepin_storm/services.py'...
***   File "./lib/python3.5/site-packages/deepin_storm/services.py", line 60
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/deepin_storm/tasks.py'...
***   File "./lib/python3.5/site-packages/deepin_storm/tasks.py", line 276
    except KeyboardInterrupt, e:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/deepin_storm-0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
